log/build_2026-04-27_04-49-36/voice_robot_pkg/stderr.log
  File "/home/tanvi/ros2_ws/install/voice_robot_pkg/lib/python3.10/site-packages/voice_robot_pkg/main.py", line 339
    finally:
    ^^^^^^^
SyntaxError: invalid syntax

